# mangoct-cmake

./: CMakeLists.txt
mgfbp/: CMakeLists.txt
mgfpj/: CMakeLists.txt
